# RealTimeEdgeDetection

./: README.md  local.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/realtimeedgedetection/: JNIBridge.kt  MainActivity.kt
app/src/main/java/com/example/realtimeedgedetection/gl/: MainRenderer.kt
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html
web/src/: main.ts
